@@ -1,3 +1,5 @@
+# -*- shell-script -*-  vi:set ft=sh:
+# @configure_input@
 # Copyright (C) 2007  Benoit Sigoure <tsuna@lrde.epita.fr>
 #
 # This program is free software: you can redistribute it and/or modify
@@ -13,6 +15,6 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-ACLOCAL_AMFLAGS = -I build-aux
-
-SUBDIRS = . tests
+GREP='@GREP@'
+EGREP='@EGREP@'
+abs_top_srcdir='@abs_top_srcdir@'
